--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "figma-discord-presence",
-  "version": "1.0.1",
+  "version": "1.0.4",
   "description": "Discord Rich Presence for Figma",
   "main": "src/main.js",
   "scripts": {
@@ -28,7 +28,9 @@
     "bplist-parser": "^0.3.0",
     "convict": "^6.2.0",
     "discord-rpc": "^4.0.1",
+    "dotenv": "^10.0.0",
     "electron-log": "^4.3.5",
+    "electron-notarize": "^1.0.0",
     "electron-updater": "^4.3.9",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
@@ -42,11 +44,15 @@
     "asar": true,
     "appId": "com.bryanberger.figma-discord-presence",
     "productName": "Figma Discord Presence",
+    "afterSign": "./src/afterSignHook.js",
     "win": {
       "target": "nsis",
       "icon": "./build/icon.ico"
     },
     "mac": {
+      "hardenedRuntime": true,
+      "entitlements": "./build/entitlements.mac.plist",
+      "entitlementsInherit": "./build/entitlements.mac.plist",
       "icon": "./build/icon.icns",
       "target": [
         {
