--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
 name: Build/release
 
-on: push
-  # push:
-  #   branches:
-  #     - master
-  # workflow_dispatch: {}
+# on: push
+  push:
+    branches:
+      - master
+  workflow_dispatch: {}
 
 jobs:
   release:
