--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start": "electron .",
     "pack": "electron-builder --dir",
     "dist": "electron-builder --mac --windows",
-    "dist:mac": "NODE_ENV=development electron-builder --mac",
+    "dist:mac": "electron-builder --mac",
     "dist:win": "electron-builder --windows",
     "publish": "electron-builder --mac --windows --publish always",
     "publish:mac": "electron-builder --mac --publish always",
