--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "figma-discord-presence",
   "productName": "Figma Discord Presence",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Discord Rich Presence for Figma",
   "main": "src/main.js",
   "scripts": {
@@ -28,6 +28,8 @@
   "license": "MIT",
   "dependencies": {
     "@bberger/win-info-fork": "^0.2.14",
+    "@sentry/electron": "^2.5.1",
+    "@sentry/integrations": "^6.10.0",
     "bplist-parser": "^0.3.0",
     "convict": "^6.2.0",
     "discord-rpc": "^4.0.1",
